--- a/RegTool.csproj
+++ b/RegTool.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NaturalSort.Extension" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
